# LexGraph

./: .dockerignore  .env.example  .gitignore  .graphifyignore  Makefile  README.md  pyproject.toml
configs/: eval_thresholds.yaml  product_services.yml
configs/adapters/: hc_ecourts_seeds.yml  hf_sources.yml  ildc_seeds.yml  india_code_seeds.yml  nyaya_anumana_seeds.yml  opennyai_seeds.yml  sci_opendata_seeds.yml
configs/authority/: tiers.yml
configs/crosswalks/: crpc_bnss.yml  iea_bsa.yml  ipc_bns.yml
data/eval/: 20260418T083916Z.json  20260418T083937Z.json  20260418T084019Z.json  20260418T084055Z.json
docs/: architecture.md  evaluation_guide.md  ingestion_guide.md  ontology.md  plan.md  solution_design.md  startup_docs.md
examples/queries/: README.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
lexgraph/: README.md
ops/: Dockerfile.python  docker-compose.yml
scripts/: ask.py  build_project_graph.sh  fetch_hf_corpora.py  local.env  run_eval.py  seed_example.py
services/: README.md  __init__.py  agent_base.py  catalog.py  cli.py  runner.py
services/lib/: __init__.py  audit.py
services/lib/bus/: __init__.py  base.py  factory.py  memory.py  redis_streams.py
services/lib/core/: __init__.py  config.py  logging.py  security.py
services/lib/data_models/: __init__.py  answer.py  events.py  evidence.py  metadata.py  provenance.py
services/lib/enrichment/: __init__.py  citation_extractor.py  citation_patterns.py  crosswalk_loader.py  legal_ner.py  section_ref.py  transformer_ner.py
services/lib/evaluation/: __init__.py  bootstrap.py  report.py  runner.py
services/lib/generation/: __init__.py  enforce.py  prompts.py  (+2 more)
services/svc_enrich/: agent.py  cli.py
services/svc_eval/: agent.py  cli.py
services/svc_generate/: agent.py  cli.py
services/svc_graph_write/: agent.py  cli.py
services/svc_http/: __init__.py  __main__.py  main.py
services/svc_index/: agent.py  cli.py
services/svc_ingest/: agent.py  cli.py
services/svc_retrieve/: agent.py  cli.py
services/svc_segment/: agent.py  cli.py
tests/integration/: test_eval_runner.py  test_generation_pipeline.py  test_pipeline.py  test_retrieval_pipeline.py
tests/unit/: test_citation_extractor.py  test_crosswalks.py  test_eval_metrics.py  test_generation.py  test_grounding.py  test_intent.py  test_ontology.py  test_parsers.py  test_private_segmenter.py  test_retrieval_components.py  test_section_ref.py  test_statute_segmenter.py  test_storage.py  test_transformer_ner.py
ui/: .dockerignore  .eslintrc.json  package-lock.json  package.json
ui/app/: globals.css  layout.tsx
ui/components/: answer-view.tsx  hero-poster.tsx  trace-timeline.tsx  workspace-panels.tsx  workspace-shell.tsx
ui/lib/: api.ts  content.ts  format.ts  types.ts
(+89 files in other folders)
